Fix title overflow

--- a/_sass/pages/homepage.scss
+++ b/_sass/pages/homepage.scss
@@ -91,6 +91,9 @@
 					h2 {
 						font-weight: lighter;
 						color: $gray-dark;
+						text-overflow: ellipsis;
+						white-space: nowrap;
+						overflow: hidden;
 					}
 
 					p {
